--- a/4.html
+++ b/4.html
@@ -8,7 +8,7 @@ Odd And Even program  -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 4</title>
-</head>~
+</head>
 
 <body>
     <script>
